Update SocialMediaData [Agenda-Accuracy to Main] (#11)
* refactor: modify auth

* refatcor: delete forget password

* fix: fixing auth errors

* refactor: remove unsused urls

* feat: add userprofile app

* refactor: delete unused codes

* up

* make ui

* feat: initial socmed_data app

* feat: add input_agenda_setting app

* refactor: add roles be; similarity_checker app [unstable]

* feat:  add statistic app

* refactor: handle similarity_checker

* refactor: change some ui

* update

* refactor: add ig data

* fix: fix objects

* update

* refactor: save ig datas to db

* fix: change wrong data saving

* refactor: change likes, comm, views fields due to err encountered

* FE instagram detail

* update

* refactor: impl + change naming for similarity checker to agenda accuracy

* update

* refactor: add download excel data for statistic

* update

* update

* fix: fixing input agenda setting page

* refact: add dashboard for automated similarity checker (showing stats) + fasten scraping ig datas

* fix: fix login regist + change calculation

* refact: fetch ig db

* refactor: impl delete option for agenda setting table

* setting.py

* database setting

* update

* update

* refactor: delete input-as then change it into edit as

* update

* refactor: move automation checker to dashboard home

* update

* update

* refactor: change some infos

* fix: fixing download data ig posts

* perf: remove unused codes

---------

Co-authored-by: andhikaihs <andhikaihs@student.telkomuniversity.ac.id>

--- a/statistic/templates/statistic.html
+++ b/statistic/templates/statistic.html
@@ -123,9 +123,9 @@
       </div>  
     </div>
     <!-- Button -->
-    <div class="d-flex justify-content-center" style="padding: 40px 0px 20px 0px;">
+    <!-- <div class="d-flex justify-content-center" style="padding: 40px 0px 20px 0px;">
       <a class="btn-option" style="width: 287px;" href="{% url 'table_input_as' %}" type="submit">Database Agenda Setting</a>
-    </div>
+    </div> -->
   </div>
   </section>
 
