--- a/input_agenda_setting/templates/table_input-as.html
+++ b/input_agenda_setting/templates/table_input-as.html
@@ -61,7 +61,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center pt-3">
             <a class="btn-option" href="{% url 'edit_agenda_setting' as.id %}" type="submit">Edit</a>
           </div>
           {% endfor %}
