--- a/user_auth/templates/dashboard.html
+++ b/user_auth/templates/dashboard.html
@@ -40,19 +40,18 @@
                   Pilih Unit Eselon 1
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">All</a></li>
-                  <li><a class="dropdown-item" href="{% url 'test' %}">Kemenkeu</a></li>
-                  <li><a class="dropdown-item" href="#">Setjen</a><li>
-                  <li><a class="dropdown-item" href="#">DJA</a></ l>
-                  <li><a class="dropdown-item" href="#">DJP</a></li>
-                  <li><a class="dropdown-item" href="#">DJPPR</a></li>
-                  <li><a class="dropdown-item" href="#">DJPB</a></li>
-                  <li><a class="dropdown-item" href="#">DJKN</a></li>
-                  <li><a class="dropdown-item" href="#">Itjen</a></li>
-                  <li><a class="dropdown-item" href="#">DJBC</a></li>
-                  <li><a class="dropdown-item" href="#">BKF</a></li>
-                  <li><a class="dropdown-item" href="#">BPPK</a></li>
-                  <li><a class="dropdown-item" href="#">SMV</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='kemenkeu' %}">Kemenkeu</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='setjen' %}">Setjen</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='dja' %}">DJA</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='djp' %}">DJP</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='djppr' %}">DJPPR</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='djpb' %}">DJPB</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='djkn' %}">DJKN</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='itjen' %}">Itjen</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='djbc' %}">DJBC</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='bkf' %}">BKF</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='bppk' %}">BPPK</a></li>
+                  <li><a class="dropdown-item" href="{% url 'instagram_detail_api' ue1='smv' %}">SMV</a></li>
                 </ul>
               </div>
             </div>
